--- a/PsychoApp_AdminPanel/src/index.html
+++ b/PsychoApp_AdminPanel/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark:bg-slate-900 ">
 <head>
   <meta charset="utf-8">
   <title>PsychoAppAdminPanel</title>
